src/test/ui/unconstrained-ref.stderr
error[E0282]: type annotations needed
  --> $DIR/unconstrained-ref.rs:6:13
   |
LL |     S { o: &None };
   |             ^^^^ cannot infer type for type parameter `T` declared on the enum `Option`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
